--- a/scss/index.css
+++ b/scss/index.css
@@ -2,9 +2,8 @@
  * Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
-.fa,
+.fa, #restaurants label,
 .fas,
-li label:last-of-type,
 .far,
 .fal,
 .fad,
@@ -18,7 +17,7 @@ li label:last-of-type,
   line-height: 1;
 }
 
-li label:last-of-type {
+#restaurants label {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: inline-block;
@@ -119,18 +118,16 @@ li label:last-of-type {
   float: right;
 }
 
-.fa.fa-pull-left,
+.fa.fa-pull-left, #restaurants label.fa-pull-left,
 .fas.fa-pull-left,
-li label.fa-pull-left:last-of-type,
 .far.fa-pull-left,
 .fal.fa-pull-left,
 .fab.fa-pull-left {
   margin-right: .3em;
 }
 
-.fa.fa-pull-right,
+.fa.fa-pull-right, #restaurants label.fa-pull-right,
 .fas.fa-pull-right,
-li label.fa-pull-right:last-of-type,
 .far.fa-pull-right,
 .fal.fa-pull-right,
 .fab.fa-pull-right {
@@ -6115,15 +6112,51 @@ readers do not read off random characters that represent icons */
   src: url("fontawesome-free-5.15.1-web/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("fontawesome-free-5.15.1-web/webfonts/fa-solid-900.woff2") format("woff2"), url("fontawesome-free-5.15.1-web/webfonts/fa-solid-900.woff") format("woff"), url("fontawesome-free-5.15.1-web/webfonts/fa-solid-900.ttf") format("truetype"), url("fontawesome-free-5.15.1-web/webfonts/fa-solid-900.svg#fontawesome") format("svg");
 }
 
-.fa,
-.fas,
-li label:last-of-type {
+.fa, #restaurants label,
+.fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
 }
 
+/*!
+ * Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ */
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block;
+  src: url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.eot");
+  src: url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.woff2") format("woff2"), url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.woff") format("woff"), url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.ttf") format("truetype"), url("fontawesome-free-5.15.1-web/webfonts/fa-regular-400.svg#fontawesome") format("svg");
+}
+
+.far {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 400;
+}
+
+.newrestaurant::before {
+  z-index: 1;
+  position: absolute;
+  content: "Nouveau";
+  background-color: #99e2d0;
+  color: #278870;
+  font-size: 0.8rem;
+  font-weight: bold;
+  padding: 0.3rem 0.8rem;
+  right: 0.8rem;
+  border-radius: 0.1rem;
+  top: 0.8rem;
+}
+
 :root {
   font-size: calc(1vw/0.2375);
+}
+
+a, a:visited, a:hover {
+  text-decoration: none;
+  color: black;
 }
 
 body {
@@ -6141,39 +6174,22 @@ body {
           align-items: center;
 }
 
-ul {
-  list-style-type: none;
-}
-
 header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-item-align: stretch;
-      align-self: stretch;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 4rem;
 }
 
-header i {
-  font-size: 1.3rem;
-  padding-top: 1.3rem;
-  margin-left: 1.5rem;
-}
-
 header img {
-  margin: 1.3rem auto auto;
-  max-width: 45%;
+  margin: 1rem auto auto;
+  width: 45%;
 }
 
-header a, header a:visited, header a:hover {
-  text-decoration: none;
-  color: black;
-}
-
-main {
+form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6181,208 +6197,216 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-main figure {
-  height: 17rem;
-  margin-bottom: -1.8rem;
-}
-
-main img {
-  height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
+  background-color: #f5f5f5;
+  padding-bottom: 4rem;
 }
 
-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding-top: 1.8rem;
-  border-radius: 2rem 2rem 0 0;
-  background-color: #f2f2f2;
+input[type="text"] {
   width: 100%;
+  height: 3rem;
+  background-color: #e5e5e5;
 }
 
-section h1 {
-  font-family: "shrikhand";
-  font-size: 1.8rem;
-  width: 75%;
+input[type="text"] ::-webkit-input-placeholder {
+  text-align: center;
+}
+
+input[type="text"] :-ms-input-placeholder {
+  text-align: center;
+}
+
+input[type="text"] ::-ms-input-placeholder {
+  text-align: center;
+}
+
+input[type="text"] ::placeholder {
+  text-align: center;
+}
+
+form h2 {
+  margin-top: 2.6rem;
+  width: 70%;
+  font-weight: bolder;
+  text-align: center;
+  line-height: 1;
+}
+
+form p {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  width: 90%;
   margin-bottom: 2rem;
 }
 
-#favorite {
-  font-size: 1.6rem;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin-bottom: 1.5rem;
-  padding-right: 1rem;
-}
-
-#favorite input[type="checkbox"] {
-  display: none;
-}
-
-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 93%;
-  padding-bottom: 5rem;
-}
-
-form ul {
-  margin: 0 0 2rem 0;
-  padding-left: 0;
-}
-
-form li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style-type: none;
-  height: auto;
-  max-width: 100%;
-  margin: 0.1rem 0 1.7rem 0rem;
-  padding-left: 0.6rem;
-  border-radius: 1rem;
-  background-color: #fff;
-  -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
-          box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
-}
-
-form input[type=checkbox] {
-  display: none;
-}
-
-form input[type=checkbox]:checked ~ label:last-of-type {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-form input[type=checkbox]:checked ~ label .sidedish, form input[type=checkbox]:checked ~ label .dish {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-fieldset {
-  border: 0;
-  padding: 0;
-  width: 100%;
-}
-
-fieldset:last-of-type {
-  margin-bottom: 1rem;
-}
-
-legend {
-  position: relative;
-  font-size: 1.1rem;
-  margin-bottom: 1.1rem;
-  border: none;
-}
-
-legend::before {
-  content: '';
-  position: absolute;
-  width: 2.6rem;
-  height: 100%;
-  border-bottom: 3px solid #99e2d0;
-  padding-bottom: 1.9rem;
-}
-
-li label:first-of-type {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 0.1px;
-  height: 100%;
-  border-radius: 1rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-li label:last-of-type {
-  display: none;
-  width: 3.8rem;
-  max-height: 5rem;
-  background-color: #99e2d0;
-  border-radius: 0 1rem 1rem 0;
-}
-
-li label:last-of-type:before {
-  content: "\f00c";
-  margin: auto;
-  color: #99e2d0;
-  background-color: #f5f5f5;
-  max-height: 5rem;
-  border-radius: 100%;
-  padding: 0.2rem;
-  font-size: 0.8rem;
-}
-
-.dish {
-  padding-top: 0.4rem;
-  font-size: 1.2rem;
-  width: 100%;
-}
-
-.sidedish {
-  font-size: 1rem;
-  padding-left: 0.01rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.price {
-  font-weight: bold;
-  font-size: 1rem;
-  padding-right: 1rem;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-}
-
-.button {
-  -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
-          box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
-  background: linear-gradient(172deg, #ff79da 21%, #9356dc 79%);
+button {
   color: white;
   border: none;
   min-width: 50%;
   padding: 0 1.5rem 0 1.5rem;
   height: 3rem;
   border-radius: 5rem 5rem;
+  -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+          box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+  background: linear-gradient(172deg, #ff79da 21%, #9356dc 79%);
 }
 
-.button:hover {
+button:hover {
   -webkit-box-shadow: 0 0 0.5rem 0.3rem #cccccc;
           box-shadow: 0 0 0.5rem 0.3rem #cccccc;
   background: linear-gradient(172deg, #ff93e1 21%, #a16be0 79%);
+}
+
+#fonctionnement {
+  margin-top: 2.4rem;
+  width: 89%;
+}
+
+#fonctionnement ol {
+  counter-reset: count;
+  padding-left: 0.5rem;
+}
+
+#fonctionnement ol li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  list-style-type: none;
+  font-size: 1rem;
+  counter-increment: count;
+  background-color: #f5f5f5;
+  height: 4.5rem;
+  margin-top: 1.5rem;
+  width: 100%;
+  padding-left: 0;
+  border-radius: 1.2rem;
+  -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+          box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+}
+
+#fonctionnement ol li:hover {
+  background-color: #f2eafb;
+}
+
+#fonctionnement ol li:hover i {
+  color: #9356dc;
+}
+
+#fonctionnement ol li i {
+  font-size: 1.1rem;
+  color: grey;
+  margin: auto 1.5rem auto 2.5rem;
+}
+
+#fonctionnement ol li::before {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: -0.8rem;
+  content: counter(count);
+  background-color: #9356dc;
+  border-radius: 50%;
+  padding: 0 0.5rem;
+  color: white;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"]:checked ~ label::before {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  content: "\f004";
+  margin: auto;
+  background: linear-gradient(172deg, #9356dc 21%, #ff79da 79%);
+  background-clip: text;
+  color: transparent;
+  font-size: 1.5rem;
+}
+
+#restaurants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #f5f5f5;
+  margin-top: 3.4rem;
+  width: 100%;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
+}
+
+#restaurants > * {
+  width: 90%;
+}
+
+#restaurants figure {
+  position: relative;
+  margin-top: 1.1rem;
+  border-radius: 1rem;
+  height: 16rem;
+  -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+          box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
+}
+
+#restaurants img {
+  height: 68%;
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#restaurants figcaption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto;
+}
+
+#restaurants .description {
+  margin-top: 1rem;
+  margin-left: 0.8rem;
+}
+
+#restaurants label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 1.5rem;
+  font-size: 1.5rem;
 }
 
 footer {
@@ -6416,4 +6440,4 @@ footer a, footer a:visited, footer a:hover {
   text-decoration: none;
   color: white;
 }
-/*# sourceMappingURL=menus.css.map */
+/*# sourceMappingURL=index.css.map */
