--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,8 +1,8 @@
 @import"../fontawesome-free-5.15.1-web/scss/fontawesome.scss";
 @import"../fontawesome-free-5.15.1-web/scss/solid.scss";
 @import"../fontawesome-free-5.15.1-web/scss/regular.scss";
-@import"../scss/var.scss";
-@import"../scss/mixins.scss";
+@import"var.scss";
+@import"mixins.scss";
 
 :root
 {
@@ -41,16 +41,28 @@ form
     background-color: #f5f5f5;
     padding-bottom: 4rem;
 }
-input[type="text"]
-{
-    width: 100%;    
-    height: 3rem;
-    background-color: #e5e5e5;
-    ::placeholder
+#localisation
     {
-        text-align: center;
+        display: flex;
+        margin:auto;
+        align-items: center;
+        justify-content: center;
+        width:100%;
+        border-top:0.1rem solid grey;
+        background-color: #e5e5e5;
+        height: 3rem;
+        i
+        {
+            color:grey;
+            padding-right: 1rem;
+        }
     }
-    
+input[type="text"]
+{   
+    background-color: #e5e5e5;
+    color: grey;
+    border:none;
+    width: 8rem;
 }
 form h2
 {
@@ -105,7 +117,7 @@ button
         padding-left: 0;
         border-radius:1.2rem;
         @include shadow;
-        &:hover 
+        &:last-of-type
         {
             background-color: lighten($primary-color, 35%);
             & i{
@@ -124,7 +136,7 @@ button
         position:absolute;
         display:flex;
         align-items: center;
-        margin-left:-0.8rem;
+        left: -0.8rem;
         content:counter(count);
         background-color:$primary-color;
         border-radius: 50%;
@@ -143,12 +155,13 @@ input[type="checkbox"]
     {
         position:absolute;
         display: flex;
-            content:fa-content($fa-var-heart);
-            margin:auto;
-            @include likebutton;
-            background-clip:text;
-            color:transparent;
-            font-size:1.5rem;
+        content:fa-content($fa-var-heart);
+        margin:auto;
+        @include likebutton;
+        -webkit-background-clip: text;
+        background-clip:text;
+        color:transparent;
+        font-size:1.5rem;
     }
 }
 #restaurants
