--- a/scss/responsivemenus.css
+++ b/scss/responsivemenus.css
@@ -42,12 +42,10 @@
     display: grid;
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     gap: 2rem;
     padding: 2rem;
     width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   form fieldset {
     display: -webkit-box;
