--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,6 +19,8 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    z-index:9;
+    @include loader;
 }
 header
 {
@@ -27,7 +29,7 @@ header
     height:4rem;
     img
     {
-       margin:1rem auto auto;
+        margin:1rem auto auto;
         width: 45%;
     }
 }
@@ -42,8 +44,8 @@ form
     padding-bottom: 4rem;
 }
 #localisation
-    {
-        display: flex;
+{
+    display: flex;
         margin:auto;
         align-items: center;
         justify-content: center;
@@ -57,10 +59,10 @@ form
             padding-right: 1rem;
         }
     }
-input[type="text"]
-{   
-    background-color: #e5e5e5;
-    color: grey;
+    input[type="text"]
+    {   
+        background-color: #e5e5e5;
+        color: grey;
     border:none;
     width: 8rem;
 }
@@ -82,13 +84,14 @@ form p
 }
 button
 {
+    
     @include button;
     @include shadow;
     @include bckggradient;
     &:hover
     {
-    @include shadow(darken( #e5e5e5, 10%));
-    @include bckggradient(lighten($secondary-color, 5%), lighten($primary-color, 5%));
+        @include shadow(darken( #e5e5e5, 10%));
+        @include bckggradient(lighten($secondary-color, 5%), lighten($primary-color, 5%));
     }
 }
 #fonctionnement
@@ -99,7 +102,7 @@ button
     {
         counter-reset: count;
         padding-left: 0.5rem;
-
+        
     }
     ol li
     {
@@ -145,24 +148,8 @@ button
     }
 }   
 .newrestaurant::before
-    {
-    @extend %newrestaurant
-    }
-input[type="checkbox"]
 {
-    display: none;
-    &:checked ~ label::before
-    {
-        position:absolute;
-        display: flex;
-        content:fa-content($fa-var-heart);
-        margin:auto;
-        @include likebutton;
-        -webkit-background-clip: text;
-        background-clip:text;
-        color:transparent;
-        font-size:1.5rem;
-    }
+    @extend %newrestaurant
 }
 #restaurants
 {
@@ -175,44 +162,80 @@ input[type="checkbox"]
     padding-bottom: 3rem;
     padding-top: 3rem;
     >*
-    {
+    {   
         width:90%;
     }
-    figure
-    {
-        position: relative;
-        margin-top:1.1rem;
-        border-radius:1rem;
-        height:16rem;
-        @include shadow;
+figure
+{
+    position: relative;
+    margin-top:1.1rem;
+    border-radius:1rem;
+    height:16rem;
+    @include shadow;
+}
+img
+{
+    height:68%;
+    width:100%;
+    border-radius: 1rem 1rem 0 0;
+    object-fit: cover;
+}
+figcaption
+{
+    justify-content: space-between;
+    margin:auto; 
+    display:flex;
+}
+.description
+{
+    margin-top:1rem;
+    margin-left: 0.8rem;
+        }
     }
-    img
+    
+    input[type="checkbox"]
     {
-        height:68%;
-        width:100%;
-        border-radius: 1rem 1rem 0 0;
-        object-fit: cover;
-    }
-    figcaption
-    {
-        display:flex;
-        justify-content: space-between;
-        margin:auto; 
-    }
-    .description
-    {
-        margin-top:1rem;
-        margin-left: 0.8rem;
-    }
-    label
-    {
-        display:flex;
-        position: relative;
-        align-items: center;
+        display: none;
+    
+        ~ label
+        {
+            display:flex;
+            position: relative;
+            align-items: center;
         margin-right:1.5rem;
         font-size:1.5rem;
+        padding:0.1rem;
+        z-index: 12;
+        transition: color 50ms;
+        transition-delay: 500ms;
         @extend %fa-icon;
         @extend .fa;
+        &::before{
+            position:absolute;
+            display: flex;
+            margin:auto;
+            -webkit-background-clip: text;
+            background-clip:text;
+            color:transparent;
+            font-size:1.5rem;
+            content:fa-content($fa-var-heart);
+            @include bckggradient($primary-color,$secondary-color);
+            transform: scale(0);
+            transition: 0s; 
+        }
+    }
+    &:checked ~ label::before
+    {        
+        content:fa-content($fa-var-heart);
+        -webkit-background-clip: text;
+        background-clip:text;
+        color:transparent;
+        transform: scale(1);
+        transition: all 500ms;
+    }
+    &:checked ~ label
+    {
+        color:transparent;  
     }
 }
 footer
