--- a/scss/menus.css
+++ b/scss/menus.css
@@ -6126,6 +6126,32 @@ li label:last-of-type {
   font-size: calc(1vw/0.2375);
 }
 
+@-webkit-keyframes menus {
+  from {
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+  }
+  to {
+    margin-top: 0.1rem;
+    margin-bottom: 1.7rem;
+    opacity: 1;
+  }
+}
+
+@keyframes menus {
+  from {
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+  }
+  to {
+    margin-top: 0.1rem;
+    margin-bottom: 1.7rem;
+    opacity: 1;
+  }
+}
+
 body {
   font-family: "roboto";
   font-size: 1rem;
@@ -6252,17 +6278,64 @@ form ul {
   padding-left: 0;
 }
 
+form ul li:nth-child(1) {
+  -webkit-animation: menus;
+          animation: menus;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 300ms;
+          animation-delay: 300ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+form ul li:nth-child(2) {
+  -webkit-animation: menus;
+          animation: menus;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 600ms;
+          animation-delay: 600ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+form ul li:nth-child(3) {
+  -webkit-animation: menus;
+          animation: menus;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 900ms;
+          animation-delay: 900ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+form ul li:nth-child(4) {
+  -webkit-animation: menus;
+          animation: menus;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 1200ms;
+          animation-delay: 1200ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
 form li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 4fr auto;
+      grid-template-columns: 4fr auto;
   list-style-type: none;
   height: auto;
+  opacity: 0;
   max-width: 100%;
-  margin: 0.1rem 0 1.7rem 0rem;
+  margin: 0.5rem 0 2rem 0rem;
   padding-left: 0.6rem;
   border-radius: 1rem;
   background-color: #fff;
+  overflow: hidden;
   -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
           box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
 }
@@ -6271,17 +6344,29 @@ input[type=checkbox] {
   display: none;
 }
 
+input[type=checkbox]:checked ~ label {
+  overflow: hidden;
+}
+
 input[type=checkbox]:checked ~ label:last-of-type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 3.8rem;
+  height: 100%;
+  border-radius: 0 1rem 1rem 0;
 }
 
 input[type=checkbox]:checked ~ label:last-of-type::before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
 }
 
 input[type=checkbox]:checked ~ label .sidedish, input[type=checkbox]:checked ~ label .dish {
+  max-width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -6322,48 +6407,69 @@ li label:first-of-type {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 0.1px;
-  height: 100%;
-  border-radius: 1rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  height: 100%;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 li label:last-of-type {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-height: 5rem;
-  -webkit-transition-property: width;
-  transition-property: width;
-  -webkit-transition-duration: 2s;
-          transition-duration: 2s;
+  position: relative;
   width: 0;
+  -webkit-transform-origin: right;
+          transform-origin: right;
   background-color: #99e2d0;
+  overflow: hidden;
+  height: 100%;
   border-radius: 0 1rem 1rem 0;
+  -webkit-transition: width;
+  transition: width;
+  -webkit-transition-duration: 750ms;
+          transition-duration: 750ms;
 }
 
 li label:last-of-type:before {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: calc(50% - 0.5rem);
+  left: calc(50% - 0.5rem);
+  position: absolute;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  overflow: hidden;
   content: "\f00c";
   margin: auto;
   color: #99e2d0;
   background-color: #f5f5f5;
-  max-height: 5rem;
   border-radius: 100%;
   padding: 0.2rem;
   font-size: 0.8rem;
+  z-index: 0;
+  -webkit-transition: -webkit-transform;
+  transition: -webkit-transform;
+  transition: transform;
+  transition: transform, -webkit-transform;
+  -webkit-transition-duration: 750ms;
+          transition-duration: 750ms;
 }
 
 .dish {
   padding-top: 0.4rem;
   font-size: 1.2rem;
   width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sidedish {
-  font-size: 1rem;
+  font-size: 0.8rem;
   padding-left: 0.01rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -6379,6 +6485,9 @@ li label:last-of-type:before {
 }
 
 .button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   -webkit-box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
           box-shadow: 0 0 0.5rem 0.3rem #e5e5e5;
   background: linear-gradient(172deg, #ff79da 21%, #9356dc 79%);
