--- a/scss/menus.scss
+++ b/scss/menus.scss
@@ -7,14 +7,27 @@
 {
     font-size: calc(1vw/0.2375);
 }
+@keyframes menus 
+{
+    from {
+        margin-top:0.5rem;
+        margin-bottom:2rem;
+        opacity: 0;
+    } 
+    to{
+        margin-top:0.1rem;
+        margin-bottom:1.7rem;
+        opacity: 1;
+    }
+}
 body{
     font-family: "roboto";
     font-size: 1rem;
     display:flex;
     flex-direction: column;
     align-items: center;
-    
 }
+
 ul
 {
     list-style-type: none;
@@ -41,7 +54,7 @@ header
         text-decoration: none;
         color:black;
     }
-}
+    }
 main
 {
     display: flex;
@@ -102,33 +115,53 @@ form
     {
     margin:0 0 2rem 0;
     padding-left: 0;
+    @for $i from 1 through 4 {
+        li:nth-child(#{$i}) {
+            animation:menus;
+            animation-duration: 2s;
+            animation-delay: 300ms*$i;
+            animation-fill-mode: forwards;
+        }
     }
-    li
-    {
-    display: flex;
+}
+li
+{
+    display: grid;
+    grid-template-columns: 4fr auto;
     list-style-type: none;
     height: auto;
+    opacity:0;
     max-width: 100%;
-    margin:0.1rem 0 1.7rem 0rem;
+    margin:0.5rem 0 2rem 0rem;
     padding-left: 0.6rem;
     border-radius: 1rem;
     background-color: #fff;
+    overflow: hidden;
     @include shadow;
-    }
+}
 }
 input[type=checkbox]
 {
     display: none;
+    &:checked ~ label
+    {
+        overflow: hidden;
+    }
     &:checked ~ label:last-of-type
     {
+        display: flex;
         width:3.8rem;
+        height: 100%;
+        border-radius: 0 1rem 1rem 0;
     }
     &:checked ~ label:last-of-type::before
     {
         display:flex;
+        transform:rotate(0);
     }
     &:checked ~ label .sidedish, &:checked ~ label .dish
     {
+        max-width: 100%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -158,6 +191,7 @@ legend
         height: 100%;
         border-bottom: 3px solid $tertiary-color;
         padding-bottom:1.9rem;
+        
     }
 }
 
@@ -166,34 +200,43 @@ li label:first-of-type
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 0.1px;
+    flex:1;
     height: 100%;
     border-radius: 1rem;
-    flex:1;
+    overflow: hidden;
 }
 li label:last-of-type
 {
     display: flex;
-    max-height:5rem;
-    transition-property: width;
-    transition-duration:2s;
-    
+    position:relative;
     width: 0;
+    transform-origin: right;
     background-color: $tertiary-color;
+    overflow: hidden;
+    height:100%;
     border-radius: 0 1rem 1rem 0;
     @extend %fa-icon;
     @extend .fas;
+    transition:width;
+    transition-duration: 750ms;
     &:before
     {
-        display:none;
+        display:flex;
+        top:calc(50% - 0.5rem);
+        left:calc(50% - 0.5rem);
+        position:absolute;
+        transform: rotate(360deg);
+        overflow:hidden;
         content: fa-content($fa-var-check);
         margin:auto;
         color: $tertiary-color;
         background-color: #f5f5f5;
-        max-height: 5rem;
         border-radius: 100%;
         padding: 0.2rem;
         font-size: 0.8rem;
+        z-index:0;
+        transition: transform;
+        transition-duration: 750ms;
     }
     
 }
@@ -202,11 +245,14 @@ li label:last-of-type
     padding-top: 0.4rem;
     font-size: 1.2rem; 
     width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
        
 }
 .sidedish
 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding-left: 0.01rem;
     flex:1;
    
@@ -220,7 +266,7 @@ li label:last-of-type
 }
 .button
 {
-    
+    width:fit-content;
     @include shadow;
     @include bckggradient;
     @include button;
