--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -75,7 +75,7 @@
         &::before
         {
             content:"";
-            background:url(images/logo/ohmyfood@2x.svg);
+            background:url(images/logo/ohmyfood.png);
             transform: rotate(35deg);
             overflow: hidden;
             justify-content: center;
